--- a/main.html
+++ b/main.html
@@ -7,7 +7,7 @@
 </head>
 
 <body>
-	<h1>Mani poorna</h1>
+	<h1>item-1</h1>
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
