--- a/main.html
+++ b/main.html
@@ -7,8 +7,12 @@
 </head>
 
 <body>
-	<div class="holder">item-1</div>
 	<!-- the entire body must be written by student -->
+	<div class="holder">
+		<div class="child">
+			ITEM
+		</div>
+	</div>
     <script type="text/javascript" src="./script.js">
 </script>
 
